# Mini-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
example/: Architecture_Documentation.md  Architecture_View.md
mini_agent/: __main__.py  agent.py  generator.py  prompt.py  session.py  tools.py  ui.py
output/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package.json  structured_context.json
output/api/: openapi.yaml
output/k8s/: deployment.yaml
output/sql/: games.sql
output/src/: app.js  server.js
output/src/admin/controllers/: admin.controller.js
output/src/admin/models/: admin.model.js
output/src/admin/routes/: admin.routes.js
output/src/admin/services/: admin.service.js
output/src/common/config/: database.js  redis.js
output/src/common/middleware/: error-handler.js  logger.js
output/src/common/utils/: api-error.js
output/src/game/controllers/: game.controller.js
output/src/game/models/: game.model.js
output/src/game/routes/: game.routes.js
output/src/game/services/: game.service.js
output/src/public/: index.html
output/src/question/controllers/: question.controller.js
output/src/question/models/: question.model.js
output/src/question/routes/: question.routes.js
output/src/question/services/: question.service.js
output/src/user/controllers/: user.controller.js
output/src/user/models/: user.model.js
output/src/user/routes/: user.routes.js
output/src/user/services/: user.service.js
output/tests/: admin.test.js  game.test.js  question.test.js  user.test.js
